[package]
name = "enum_reflect"
version = "0.2.2"
edition = "2024"
authors = ["Hryhorii Kravtsov kravtsov.hryhorii@gmail.com"]
description = "Enum fields reflection library"
license = "MIT"
repository = "https://github.com/hrykr/enum-reflect/"
homepage = "https://github.com/hrykr/enum-reflect/"
readme = "README.md"
keywords = ["enum", "reflect", "rust", "field", "derive"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
enum_reflect_extern = "0.2"