[workspace]
members = [
    "crates/enum_reflect",
    "crates/enum_reflect_extern"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.6"

[workspace.dependencies]
enum_reflect = { version = "0.2.5", path = "crates/enum_reflect" }
enum_reflect_extern = { version = "0.2.1", path = "crates/enum_reflect_extern" }

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"